# pdf-search

./: .gitignore  Modelfile  README.md  classification_task.py  classification_task_langchain.py  classification_task_openai.py  extraction_results.json  main.py  pyproject.toml
core/: config.py
models/: llm_model.py
prompts/: labels_prompt.txt  labels_prompt_openai.txt
