[project]
name = "pdf-search"
version = "0.1.0"
description = ""
authors = [
    {name = "Manta Ribk",email = "manta.r@hotmail.lt"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-community (>=0.3.30,<0.4.0) ; python_version >= \"3.10\" and python_version < \"4.0\"",
    "langchain (>=0.3.27,<0.4.0) ; python_version >= \"3.10\" and python_version < \"4.0\"",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "pypdf (>=6.1.1,<7.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "langchain-ollama (>=0.3.10,<0.4.0) ; python_version >= \"3.10\" and python_version < \"4.0\"",
    "langchain-core (>=0.3.78,<0.4.0) ; python_version >= \"3.10\" and python_version < \"4.0\"",
    "pydantic (>=2.11.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.13.3"

